--- a/adpolicy.conf
+++ b/adpolicy.conf
@@ -9,6 +9,22 @@ update-url = https://git.io/JfIXo
 
 
 [Rule]
+DOMAIN,sugar.zhihu.com,REJECT-DICT
+DOMAIN,open.kuaishouzt.com,REJECT-DICT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,pglstatp-toutiao.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
+DOMAIN,afd.baidu.com,REJECT-DICT
+DOMAIN,ilce.alicdn.com,REJECT
+DOMAIN-KEYWORD,zhimg,REJECT
+DOMAIN,m.citiccardcdn.citicbank.com,REJECT
+DOMAIN,creditcard.ecitic.com,REJECT
+DOMAIN,res.cc.cmbimg.com,REJECT
+DOMAIN-SUFFIX,didistatic.com,REJECT
+DOMAIN,ut-static.udache.com,REJECT
+DOMAIN,dpubstatic.udache.com,REJECT
+DOMAIN,nr-op.elemecdn.com,REJECT
+DOMAIN,imap.mxhichina.com,DIRECT 
 DOMAIN,218.93.204.35,REJECT
 DOMAIN,file.ishansong.com,REJECT
 DOMAIN-SUFFIX,elemecdn.com,REJECT
