--- a/adpolicy.conf
+++ b/adpolicy.conf
@@ -9,6 +9,37 @@ update-url = https://git.io/JfIXo
 
 
 [Rule]
+DOMAIN,m.dianping.com,REJECT
+DOMAIN,apimobile.meituan.com,REJECT
+DOMAIN,www.meituan.com,REJECT
+DOMAIN,www.googleadservices.com,REJECT
+DOMAIN,met_metrics_mobile.dreport.meituan.net,REJECT
+DOMAIN,prism-report-ddd.dreport.meituan.net,REJECT
+DOMAIN,hreport.meituan.com,REJECT
+DOMAIN,report.meituan.com,REJECT
+DOMAIN,met_mobile_sniffer.dreport.meituan.net,REJECT
+DOMAIN,i.waimai.meituan.com,REJECT
+DOMAIN,portal-portm.meituan.com,REJECT
+DOMAIN-SUFFIX,dreport.meituan.net,REJECT
+DOMAIN,dreport.meituan.net,REJECT
+DOMAIN-SUFFIX,catfront.dianping.com,REJECT
+DOMAIN,api.neixin.cn,REJECT
+DOMAIN,p0.meituan.net,REJECT
+DOMAIN,a1.alibabausercontent.com,REJECT
+DOMAIN,pgdt.ugdtimg.com,REJECT
+DOMAIN,qzs.gdtimg.com,REJECT
+DOMAIN,qzs.gdtimg.com,REJECT
+DOMAIN,sdk.e.qq.com,REJECT
+DOMAIN,als.baidu.com,REJECT
+DOMAIN-SUFFIX,pglstatp-toutiao.com,REJECT
+DOMAIN,sf3-be-pack.pglstatp-toutiao.com,REJECT
+DOMAIN,hector.baidu.com,REJECT
+DOMAIN,jzapi.baidu.com,REJECT
+DOMAIN,hmma.baidu.com,REJECT
+DOMAIN,api-access.pangolin-sdk-toutiao.com,REJECT
+DOMAIN,internal-amis-res.cdn.bcebos.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,pgdt.ugdtimg.com,REJECT
 DOMAIN,sugar.zhihu.com,REJECT-DICT
 DOMAIN,open.kuaishouzt.com,REJECT-DICT
 DOMAIN,mi.gdt.qq.com,REJECT
